--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@
 # BlueJ files
 *.ctxt
 
+.vscode/monitoring.json
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
 *.jar
+!gradle/wrapper/gradle-wrapper.jar
 *.war
 *.nar
 *.ear
