--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation libs.guava
+    testImplementation 'junit:junit:4.13.2'
 }
 
 testing {
