--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,5 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'launcher.GameLauncher'
 }
