Test: 라인커버리지 위한 logic, component 테스트 다수, menupanel 임시 테스트
- scoreboard 폰트 깨짐 문제 임시 해결

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ jacocoTestReport {
     dependsOn test
     reports {
         xml.required = true
+        html.required= true
         csv.required = false
         html.outputLocation = layout.buildDirectory.dir("reports/jacocoHtml")
     }
