--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'jacoco'
+    id 'edu.sc.seis.launch4j' version '3.0.5'
 }
 
 repositories {
@@ -71,6 +72,13 @@ jacocoTestCoverageVerification {
     }
 }
 
-tasks.register('verifyCoverage') {
-    dependsOn tasks.test, tasks.jacocoTestCoverageVerification
+/* Launch4j 설정 */
+launch4j {
+    outfile = "Tetris.exe"                            // exe 파일명
+    bundledJrePath = "jre"   // 내부 폴더를 참조하도록 변경
+    mainClassName = application.mainClass.get()       // 메인 클래스
+    jarTask = tasks.named("jar").get()                 // JAR 지정 방식 변경
+    jreMinVersion = "1.8.0"                           // 최소 JRE 버전
+    outputDir = "${projectDir}/distribution"
+    // icon = "${projectDir}/src/main/resources/icon.ico" // 아이콘 있으면 추가
 }
